--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     },
     "scripts": {
         "start": "node index.js"
+    },
+    "dependencies": {
+        "cors": "^2.8.4",
+        "express": "^4.16.3"
     }
 }
